# ChangeLog for dev-perl/Text-Aspell
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Aspell/ChangeLog,v 1.38 2007/12/17 19:07:42 drac Exp $

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Text-Aspell-0.09.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> Text-Aspell-0.09.ebuild:
  alpha/ia64/sparc/x86 stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Text-Aspell-0.08.ebuild:
  amd64 stable

*Text-Aspell-0.09 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +Text-Aspell-0.09.ebuild:
  Version bump

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Text-Aspell-0.08.ebuild:
  Stable on ppc.

  14 Jul 2007; Raúl Porcel <armin76@gentoo.org> Text-Aspell-0.08.ebuild:
  alpha/ia64/x86 stable

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Text-Aspell-0.08.ebuild:
  Marking sparc stable

*Text-Aspell-0.08 (12 May 2007)

  12 May 2007; Michael Cummings <mcummings@gentoo.org>
  +Text-Aspell-0.08.ebuild:
  Version bump

*Text-Aspell-0.07 (16 Apr 2007)

  16 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +Text-Aspell-0.07.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Text-Aspell-0.06.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Text-Aspell-0.06.ebuild:
  Stable on Alpha + IA64.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Text-Aspell-0.04.ebuild, Text-Aspell-0.05.ebuild, Text-Aspell-0.06.ebuild:
  Ebuild maintenance

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Text-Aspell-0.06.ebuild:
  Stable on ppc.

  25 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Aspell-0.06.ebuild:
  sparc stable

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Aspell-0.06.ebuild:
  amd64 stable

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Text-Aspell-0.05.ebuild:
  ppc stable
