@@ -2,9 +2,9 @@ DIST Text-Aspell-0.06.tar.gz 13343 RMD160 e4f6a084566d518f52c80c78d65e37d3c763de
 DIST Text-Aspell-0.07.tar.gz 13483 RMD160 39b5807e0290f2451c15f32ea1baaa69c9bac4e8 SHA1 675cac88d6cb92e65762914be879c0fd74d1bbab SHA256 f880ac96640c177a6a71307d41d400f3671408cd788b53c3e467698e81e6a53a
 DIST Text-Aspell-0.08.tar.gz 13514 RMD160 0387d41ec01abf189f4b5807b3b3ba9f657af3a4 SHA1 6219b93b12ce46e31996d949bddbaa2640e1fd36 SHA256 d28da8a6a2df7a83989f7a05a822bf2b4863fbf5e17c16adfa454c9bad5c99f6
 DIST Text-Aspell-0.09.tar.gz 13548 RMD160 f1860460223590f090c819375631e68beeb99870 SHA1 2065e1b8375e613477ba6148a53424bff1addf24 SHA256 2bea3209f18e273b193e3175a42d269391919e49ab106b6e252395d272182f65
-EBUILD Text-Aspell-0.06.ebuild 627 RMD160 ef667b6e44a00b1efca1a7a0a36816054bcf0c0b SHA1 670c2bee3f4ce848bc46c6e7c8bbb98cf4396b1e SHA256 5ebf88f99919dc6c37b5a0ec599a460ad3cb24609ae6d273ebd466e36516004f
-EBUILD Text-Aspell-0.07.ebuild 644 RMD160 b4c273d14d5c13253a1cc4bc7d2ada616973db74 SHA1 c0bf34f2ead8dc2fde15a747c8a054ced9cd2a42 SHA256 56656372dc231cc470778e83b21e6c5b267b31a78b86d0390018f7195c61722f
-EBUILD Text-Aspell-0.08.ebuild 650 RMD160 6b3062074131064716efb003e3e4cbc605eccb64 SHA1 37be0bbc740c5852ae6a08d9c994f813cf9daf1d SHA256 c93529fcd69a9df462ce23f8b1c7f015cff55f9edba19746e5e67890c0473431
-EBUILD Text-Aspell-0.09.ebuild 650 RMD160 5bd71113d5bfb461eea7be7a2f39d7c888d454f5 SHA1 057c9dc0d058626c677cd5e1df93197df3556583 SHA256 d0cc50ff79340501892e74df0068c857e28e1fd57a1a45bf232edec1fbd3e507
-MISC ChangeLog 4572 RMD160 5fd62748efe22e3430efbb750db175b0fee2089c SHA1 576cd0e9016368a30876b9bce9c001245bb7e4d7 SHA256 d70c4c418e1ea237d04eb09bdc5ebe6b005564dd8f7ba23e2ce6900f7f23d064
+EBUILD Text-Aspell-0.06.ebuild 645 RMD160 87ff4854dec904d1fb016feaa990cf91d260f8d5 SHA1 a6ee3dd2c989b4ccac14aa6b597d7b4c85404744 SHA256 8447fb02c907f77f8db9cd386feb020710840d9db694676d10dc031a14b9a427
+EBUILD Text-Aspell-0.07.ebuild 662 RMD160 b7fea113cce6cee835f92367599df51c253974e8 SHA1 cb3716566cb77d6350cee5d25dd5be4721b7eddb SHA256 2f8cdc8d74603de0d2a509384dd72717e8585107ce7843798dcf3b1fdbfc1c9b
+EBUILD Text-Aspell-0.08.ebuild 668 RMD160 d887368f2bdfc7743d3f69e3fba0dbed5792ea84 SHA1 f9df60fc576e0c0a9481ea040fb8e30ca7d6f75c SHA256 177e1bccabd641f19a3b70d5a687931588c00a785adf97df06940727b9226165
+EBUILD Text-Aspell-0.09.ebuild 674 RMD160 ef797944c1ffc5a9570a006a09e7dfa8955e5408 SHA1 0ca0a1cf0bcb8c7d962e12413d3cce67e4b9de8f SHA256 44c58f33646a2bd86767b1c9442075f01fff1726fc704196df88201e862300bc
+MISC ChangeLog 4676 RMD160 abc1c6fc4ebd0686c4eac8a2a71869c3a959934a SHA1 020695bc6067ba7c941929889461d6d13fdda435 SHA256 823f6f4a975db7704a801a40573c1f07364dc994db1e47785d77b2373e58b7e7
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
