@@ -12,7 +12,7 @@ HOMEPAGE="http://search.cpan.org/~hank/"
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="~amd64 ~ia64 ~ppc-macos ~sparc-solaris ~x86"
+KEYWORDS="~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~sparc-solaris"
 IUSE=""
 
 # Disabling tests for now - see bug #147897 --ian
